--- a/BulkyBookWeb/appsettings.json
+++ b/BulkyBookWeb/appsettings.json
@@ -8,9 +8,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //"DefaultConnection": "Server=tcp:olympicserver.database.windows.net,1433;Initial Catalog=olympic_db;Persist Security Info=False;User ID=olympic_server;Password=Admin123*;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
-    "DefaultConnection": "Server=.;Database=funolympic;Trusted_Connection=True;MultipleActiveResultSets=true;"
-    //"DefaultConnection": "Server=tcp:cherryserver.database.windows.net,1433;Initial Catalog=startertemplate;Persist Security Info=False;User ID=cherry;Password=World@Hello-123;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": "Server=tcp:olympicserver.database.windows.net,1433;Initial Catalog=olympic_db;Persist Security Info=False;User ID=olympic_server;Password=Admin123*;MultipleActiveResultSets=True;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    //"DefaultConnection": "Server=.;Database=funolympic;Trusted_Connection=True;MultipleActiveResultSets=true;"
+    
   }
 
 
